[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/FontBetterPixels56.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/FontBetterPixels32.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/OptionsMenu/OptionMenu.gd" type="Script" id=3]

[sub_resource type="Theme" id=6]
default_font = ExtResource( 2 )
PopupDialog/styles/panel = null

[node name="OptionMenu" type="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.12549, 0.12549, 1 )
script = ExtResource( 3 )

[node name="ResolutionOptBtn" type="OptionButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = -21.0
margin_right = 309.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="ResolutionOptBtn"]
margin_left = -62.0
margin_top = -40.0
margin_right = 112.0
margin_bottom = -2.0
text = "Resolution"

[node name="WindowModeOptBtn" type="OptionButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 95.0
margin_top = 74.0
margin_right = 308.0
margin_bottom = 117.0

[node name="Label" type="Label" parent="WindowModeOptBtn"]
margin_left = -62.0
margin_top = -40.0
margin_right = 112.0
margin_bottom = -2.0
text = "Window mode"

[node name="BackToMenuBtn" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -65.0
margin_right = 177.0
margin_bottom = -19.0
text = "Back"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="ResetButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -153.5
margin_top = -55.0
margin_right = -21.5
margin_bottom = -25.0
text = "Reset save"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -74.5
margin_right = 117.0
margin_bottom = 74.5
theme = SubResource( 6 )
dialog_text = "Do you want to reset your progress?"
dialog_autowrap = true

[connection signal="item_selected" from="ResolutionOptBtn" to="." method="_on_ResolutionOptBtn_item_selected"]
[connection signal="item_selected" from="WindowModeOptBtn" to="." method="_on_WindowModeOptBtn_item_selected"]
[connection signal="pressed" from="BackToMenuBtn" to="." method="_on_BackToMenuBtn_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
